tests/baselines/reference/assignFromStringInterface.errors.txt
tests/cases/conformance/types/primitives/string/assignFromStringInterface.ts(3,1): error TS2322: Type 'String' is not assignable to type 'string'.


==== tests/cases/conformance/types/primitives/string/assignFromStringInterface.ts (1 errors) ====
    var x = '';
    var a: String;
    x = a;
    ~
!!! error TS2322: Type 'String' is not assignable to type 'string'.
    a = x;